# rotateai-simulator

./: .gitignore  README.md  pyproject.toml
config/: stm32u5.toml
src/simulator/: __init__.py  __main__.py  bench.py  config.py  data.py  report.py  runner.py
tests/: conftest.py  test_bench.py  test_config.py  test_data.py  test_e2e.py  test_integration.py  test_main.py  test_report.py  test_runner.py
tests/fixtures/: mn11_157aprh_tiny.mat  repeater.c  testconfig.toml
