[project.build-system]
requires = ['setuptools>=45', 'wheel']
build_backend = 'setuptools.build_meta'

[project]
name = 'rotateai-simulator'
version = '0.0.0'
description = 'A simulator for RotateAI model inference on virtual microcontroller environments'
requires-python = '>=3.10'
dependencies = [
    
]

[project.optional-dependencies]
test = [
    'pytest>=7.0',
]

